# vmupro-gnuboy

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: build-and-release.yml
src/: CMakeLists.txt  metadata.json  pack.ps1  pack.sh  sdkconfig  send.ps1
src/main/: CMakeLists.txt  link_cable.c  link_cable.h  main.cpp  metadata.json  pack.sh
src/main/gnuboy/: cpu.c  gnuboy.c  gnuboy.h  hw.c  hw.h  lcd.c  sound.c
